Added repository auth-token
