# api/openapi-spec/swagger.json
@@ -3913,6 +3913,16 @@
         }
       ]
     },
+    "ci.kube.git-apiserver.apis.git.v1alpha1.RepositoryAuth": {
+      "properties": {
+        "secretKey": {
+          "type": "string"
+        },
+        "secretName": {
+          "type": "string"
+        }
+      }
+    },
     "ci.kube.git-apiserver.apis.git.v1alpha1.RepositoryList": {
       "properties": {
         "apiVersion": {
@@ -3943,10 +3953,14 @@
     },
     "ci.kube.git-apiserver.apis.git.v1alpha1.RepositorySpec": {
       "properties": {
-        "secret": {
+        "auth": {
+          "$ref": "#/definitions/ci.kube.git-apiserver.apis.git.v1alpha1.RepositoryAuth"
+        },
+        "host": {
           "type": "string"
         },
         "url": {
+          "description": "github",
           "type": "string"
         }
       }
